--- a/default.conf
+++ b/default.conf
@@ -202,10 +202,10 @@
 		<RECENT_PROJECTS>
 			<astr>
 				<s>
-					<![CDATA[/home/pi/.config/codeblocks/default.workspace]]>
+					<![CDATA[/home/pi/CyberpunkRed/CPR_Manager/cprx_v1/Builds/CodeBlocksLinux/cprx_v1.cbp]]>
 				</s>
 				<s>
-					<![CDATA[/home/pi/CyberpunkRed/CPR_Manager/cprx_v1/Builds/CodeBlocksLinux/cprx_v1.cbp]]>
+					<![CDATA[/home/pi/.config/codeblocks/default.workspace]]>
 				</s>
 				<s>
 					<![CDATA[/home/pi/juceSequencer/Builds/CodeBlocksLinux/juceSeq.cbp]]>
@@ -535,6 +535,16 @@
 							</str>
 						</NAME>
 					</style15>
+					<style16>
+						<FORE>
+							<colour r="128" g="255" b="0" />
+						</FORE>
+						<NAME>
+							<str>
+								<![CDATA[Comment line (documentation)]]>
+							</str>
+						</NAME>
+					</style16>
 					<style21>
 						<FORE>
 							<colour r="240" g="115" b="240" />
@@ -655,6 +665,28 @@
 							</str>
 						</NAME>
 					</style42>
+					<style43>
+						<FORE>
+							<colour r="255" g="0" b="247" />
+						</FORE>
+						<BACK>
+							<colour r="23" g="46" b="46" />
+						</BACK>
+						<NAME>
+							<str>
+								<![CDATA[Matching brace highlight]]>
+							</str>
+						</NAME>
+					</style43>
+					<editor>
+						<keywords>
+							<SET4>
+								<str>
+									<![CDATA[LINUX="1" DEBUG="1" _DEBUG="1" JUCE_DISPLAY_SPLASH_SCREEN="1" JUCE_USE_DARK_SPLASH_SCREEN="1" JUCE_PROJUCER_VERSION="0x70002" JUCE_MODULE_AVAILABLE_juce_core="1" JUCE_MODULE_AVAILABLE_juce_data_structures="1" JUCE_MODULE_AVAILABLE_juce_events="1" JUCE_MODULE_AVAILABLE_juce_graphics="1" JUCE_MODULE_AVAILABLE_juce_gui_basics="1" JUCE_GLOBAL_MODULE_SETTINGS_INCLUDED="1" JUCE_STRICT_REFCOUNTEDPOINTER="1" JUCE_STANDALONE_APPLICATION="1" JUCER_CODEBLOCKS_LINUX_191E0897="1" JUCE_APP_VERSION="1.0.0" JUCE_APP_VERSION_HEX="0x10000" JucePlugin_Build_VST="0" JucePlugin_Build_VST3="0" JucePlugin_Build_AU="0" JucePlugin_Build_AUv3="0" JucePlugin_Build_AAX="0" JucePlugin_Build_Standalone="0" JucePlugin_Build_Unity="0" JucePlugin_Build_LV2="0" __GNUC__ __GNUG__]]>
+								</str>
+							</SET4>
+						</keywords>
+					</editor>
 					<NAME>
 						<str>
 							<![CDATA[C/C++]]>
@@ -1008,24 +1040,24 @@
 			<entry17>
 				<NAME>
 					<str>
-						<![CDATA[tday]]>
-					</str>
-				</NAME>
-				<CODE>
-					<str>
-						<![CDATA[$TDAY]]>
-					</str>
-				</CODE>
-			</entry17>
-			<entry18>
-				<NAME>
-					<str>
 						<![CDATA[while]]>
 					</str>
 				</NAME>
 				<CODE>
 					<str>
 						<![CDATA[while (|)\n    ;]]>
+					</str>
+				</CODE>
+			</entry17>
+			<entry18>
+				<NAME>
+					<str>
+						<![CDATA[tday]]>
+					</str>
+				</NAME>
+				<CODE>
+					<str>
+						<![CDATA[$TDAY]]>
 					</str>
 				</CODE>
 			</entry18>
@@ -1292,20 +1324,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</gcc>
 			<icc>
 				<NAME>
@@ -1318,20 +1336,6 @@
 						<![CDATA[/opt/intel/cc/9.0]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</icc>
 			<sdcc>
 				<NAME>
@@ -1354,20 +1358,6 @@
 						<![CDATA[/usr/local]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</sdcc>
 			<tcc>
 				<NAME>
@@ -1390,20 +1380,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</tcc>
 			<clang>
 				<NAME>
@@ -1416,20 +1392,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</clang>
 			<arm_elf_gcc>
 				<NAME>
@@ -1442,20 +1404,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</arm_elf_gcc>
 			<bfin_elf_gcc>
 				<NAME>
@@ -1468,20 +1416,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</bfin_elf_gcc>
 			<avr_gcc>
 				<NAME>
@@ -1494,20 +1428,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</avr_gcc>
 			<zpu_gcc>
 				<NAME>
@@ -1530,20 +1450,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</zpu_gcc>
 			<android_gcc>
 				<NAME>
@@ -1566,20 +1472,6 @@
 						<![CDATA[$NDK]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</android_gcc>
 			<lm8_gcc>
 				<NAME>
@@ -1602,20 +1494,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</lm8_gcc>
 			<lm32_gcc>
 				<NAME>
@@ -1638,20 +1516,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</lm32_gcc>
 			<msp430_gcc>
 				<NAME>
@@ -1669,20 +1533,6 @@
 						<![CDATA[/usr/local/msp430]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</msp430_gcc>
 			<tricore_gcc>
 				<NAME>
@@ -1700,20 +1550,6 @@
 						<![CDATA[/usr/local/tricore]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</tricore_gcc>
 			<ppc_gcc>
 				<NAME>
@@ -1726,20 +1562,6 @@
 						<![CDATA[/usr/local/ppc]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</ppc_gcc>
 			<powerpc_eabi>
 				<NAME>
@@ -1752,20 +1574,6 @@
 						<![CDATA[/usr/local/sbin]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</powerpc_eabi>
 			<gdc>
 				<NAME>
@@ -1778,20 +1586,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</gdc>
 			<ldc>
 				<NAME>
@@ -1814,20 +1608,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</ldc>
 			<dmd>
 				<NAME>
@@ -1855,20 +1635,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</dmd>
 			<gfortran>
 				<NAME>
@@ -1881,20 +1647,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</gfortran>
 			<g95>
 				<NAME>
@@ -1907,20 +1659,6 @@
 						<![CDATA[/usr]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</g95>
 			<pgifortran>
 				<NAME>
@@ -1933,20 +1671,6 @@
 						<![CDATA[/opt/pgi/linux86]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</pgifortran>
 			<null>
 				<NAME>
@@ -1959,47 +1683,8 @@
 						<![CDATA[-- No Compiler --]]>
 					</str>
 				</MASTER_PATH>
-				<macros>
-					<compile_single_file_to_object_file />
-					<generate_dependencies_for_file />
-					<compile_win32_resource_file />
-					<link_object_files_to_executable />
-					<link_object_files_to_console_executable />
-					<link_object_files_to_dynamic_library />
-					<link_object_files_to_static_library />
-					<link_object_files_to_native_executable />
-				</macros>
-				<switches />
-				<regex />
-				<sort />
-				<custom_variables />
 			</null>
-			<set000 />
-			<set001 />
-			<set002 />
-			<set003 />
-			<set004 />
-			<set005 />
-			<set006 />
-			<set007 />
-			<set008 />
-			<set009 />
-			<set010 />
-			<set011 />
-			<set012 />
-			<set013 />
-			<set014 />
-			<set015 />
-			<set016 />
-			<set017 />
-			<set018 />
-			<set019 />
-			<set020 />
-			<set021 />
-			<set022 />
-			<set023 />
 		</sets>
-		<user_sets />
 	</compiler>
 	<gcv>
 		<sets>
